# openjph-rs

./: .gitignore  CODEBASE_ANALYSIS.md  Cargo.toml  D2D5_REVERSIBLE_TEST_REPORT.txt  D2D5_TEST_RESULTS.csv  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  HOW_TO_REPRODUCE.md  LOSSLESS_VERIFICATION_SUMMARY.md  MODULE_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_EXPLORATION.md  README_TEST_RESULTS.md
.github/workflows/: ci.yml
openjph-cli/: Cargo.toml
openjph-cli/src/: compress.rs  expand.rs
openjph-cli/src/img_io/: dpx.rs  mod.rs  ppm.rs  rawl.rs  yuv.rs
openjph-core/: Cargo.toml
openjph-core/benches/: codec.rs
openjph-core/src/: arch.rs  arg.rs  error.rs  file.rs  lib.rs  mem.rs  message.rs  types.rs
openjph-core/src/codestream/: bitbuffer_read.rs  bitbuffer_write.rs  codeblock.rs  codeblock_fun.rs  local.rs  mod.rs  precinct.rs  resolution.rs  subband.rs  tile.rs  tile_comp.rs
openjph-core/src/codestream/simd/: mod.rs  neon.rs  x86.rs
openjph-core/src/coding/: common.rs  decoder32.rs  decoder64.rs  encoder.rs  mod.rs  tables.rs
openjph-core/src/coding/simd/: mod.rs  neon.rs  x86.rs
openjph-core/src/params/: local.rs  mod.rs
openjph-core/src/transform/: colour.rs  mod.rs  wavelet.rs
openjph-core/src/transform/simd/: mod.rs  neon.rs  neon_colour.rs  x86.rs  x86_colour.rs
openjph-core/tests/: integration_encode_decode.rs  integration_error_handling.rs  integration_pipeline.rs  integration_roundtrip.rs
openjph-core/tests/common/: compare_files.rs  mod.rs  mse_pae.rs
scripts/: ci.sh  publish.sh
