[workspace]
members = ["openjph-core", "openjph-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "BSD-2-Clause"
repository = "https://github.com/AousNaman/OpenJPH"
description = "Pure Rust implementation of HTJ2K (JPEG 2000 Part 15) codec"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
