[package]
name = "openjph-core"
description = "HTJ2K (JPEG 2000 Part 15) codec library — pure Rust port of OpenJPH"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["simd"]
simd = []
avx512 = ["simd"]

[[bench]]
name = "codec"
harness = false
